# openapi/auth-api.yml
@@ -22,7 +22,7 @@ paths:
           type: string
         required: true
       - in: header
-        name: SOURCE_IP
+        name: X-Real-IP
         schema:
           type: string
           format: ip
@@ -55,7 +55,7 @@ paths:
           type: string
         required: true
       - in: header
-        name: SOURCE_IP
+        name: X-Real-IP
         schema:
           type: string
           format: ip
@@ -93,7 +93,7 @@ paths:
           type: string
         required: true
       - in: header
-        name: SOURCE_IP
+        name: X-Real-IP
         schema:
           type: string
           format: ip
@@ -131,7 +131,7 @@ paths:
           type: string
         required: true
       - in: header
-        name: SOURCE_IP
+        name: SOURCX-Real-IPE_IP
         schema:
           type: string
           format: ip
@@ -161,7 +161,7 @@ paths:
           type: string
         required: true
       - in: header
-        name: SOURCE_IP
+        name: X-Real-IP
         schema:
           type: string
           format: ip
@@ -221,7 +221,7 @@ paths:
         type: string
       required: true
     - in: header
-      name: SOURCE_IP
+      name: X-Real-IP
       schema:
         type: string
         format: ip
@@ -260,7 +260,7 @@ paths:
         type: string
       required: true
     - in: header
-      name: SOURCE_IP
+      name: X-Real-IP
       schema:
         type: string
         format: ip
